--- a/ratpack-site/src/main/static/styles/ratpack.scss
+++ b/ratpack-site/src/main/static/styles/ratpack.scss
@@ -1,4 +1,4 @@
-$logo-font-size-large: 1.25rem;
+$logo-font-size-large: 1.2rem;
 $logo-font-size-medium: 0.8rem;
 
 @import "compass";
